--- a/index.html
+++ b/index.html
@@ -1,18 +1,68 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Misrule</title>
-  </head>
-  <body>
+<html lang="en"
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Misrule</title>
+</head>
+<body>
+  <header>
     <h1>Misrule</h1>
-    <p><strong>Status:</strong> Active development.</p>
+    <p><Strong>Status:</Strong>Active development</p>
+  </header>
+  <section id="about">
+    <h2>About</h2>
+    <p>
+      Misrule is an experimental cybersecurity learning project.
+      This site documents beginner-level skill development, hands-on practice,
+      and system experimentation as I learn how modern security concepts work in reality. 
+    </p>
+  </section>
+  <section id="skills">
+    <h2>Cybersecurity Skills (Beginner Practice)</h2>
+    <ul>
+      <li>Linux command-line fundamentals (TryHackMe)</li>
+      <li>User permissions and basic privilege concepts (Linux labs)</li>
+      <li>Network scanning fundamentals with Nmap</li>
+      <li>Introduction to common web vulnerabilities (OWASP Top 10)</li>
+      <li>Basic scripting concepts for automation (Python)</li>
+    </ul>
+    <p>
+      Skills are developed through beginner-friendly, hands-on labs and documented practice.
+    </p>
+  </section>
+  <section id="certifications">
+    <h2>Planned Certifications</h2>
+    <ul>
+      <li>AWS Solutions Architect Associate</li>
+      <li>Azure Administrator</li>
+      <li>Azure Security Enginer</li>
+      <li>Comptia A+</li>
+      <li>Comptia Network+</li>
+      <li>Comptia Security+</li>
+      <li>Comptia Data+</li>
+      <li>Comptia Project+</li>
+      <li>Comptia CySA+</li>
+      <li>Comptia Pentest+</li>
+      <li>Linux Essentials</li>
+      <li>ITIL 4</li>
+      <li>eJPT</li>
+      <li>NIST AI RMF</li>
+      <li>CCSP (Associate)</li>
+      <li>SSCP (Associate)</li>
+    </ul>
+    <p>
+      Certifcations listed are planned learning milestones and have not yet been earned. 
+      Upon their completion a new section titled, "Completed Certifications," will be created. 
+    </p>
+  </section>
+  <section id="disclaimer">
+    <h2>Disclaimer</h2>
     <p>
       Misrule is an experimental project.
-      This site documents ongoing research, development, and systems testing.
-      Nothing here constitutes professional, legal, financial, or operational advice. 
-      Features, concepts, and availability are subject to change without notice. 
+      Nothing on this site constitutes professional, legal, or security advice. 
+      Content, structure,a dn focus may change without notice.
     </p>
-  </body>
+  </section>
+</body>
 </html>
