--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h1>Misrule</h1>
     <p><Strong>Status:</Strong>Active development</p>
   </header>
+  <nav>
+    <p><a href="log.html">Practice Log</a></p>
+  </nav>
   <section id="about">
     <h2>About</h2>
     <p>
