--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
       Upon their completion a new section titled, "Completed Certifications," will be created. 
     </p>
   </section>
+  <section id="current focus"/>
+    <h2>Current Focus</h2>
+    <p>
+      My current focus is A+ Core 1 and understanding basic front-end development.
+    </p>
+  </section>
   <section id="disclaimer">
     <h2>Disclaimer</h2>
     <p>
