--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section id="current focus"/>
     <h2>Current Focus</h2>
     <p>
-      My current focus is A+ Core 1 and understanding basic front-end development.
+      My current focus is passing the Comptia A+ Core 1 exam and understanding basic front-end web development.
     </p>
   </section>
   <section id="disclaimer">
