--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>Misrule</h1>
-    <p><Strong>Status:</Strong>Active development</p>
+    <p><Strong>Status:</Strong> Active development</p>
   </header>
   <nav>
     <p><a href="log.html">Practice Log</a></p>
@@ -39,7 +39,7 @@
     <ul>
       <li>AWS Solutions Architect Associate</li>
       <li>Azure Administrator</li>
-      <li>Azure Security Enginer</li>
+      <li>Azure Security Engineer</li>
       <li>Comptia A+</li>
       <li>Comptia Network+</li>
       <li>Comptia Security+</li>
@@ -55,14 +55,14 @@
       <li>SSCP (Associate)</li>
     </ul>
     <p>
-      Certifcations listed are planned learning milestones and have not yet been earned. 
+      Certifications listed are planned learning milestones and have not yet been earned. 
       Upon their completion a new section titled, "Completed Certifications," will be created. 
     </p>
   </section>
   <section id="current focus"/>
     <h2>Current Focus</h2>
     <p>
-      My current focus is passing the Comptia A+ Core 1 exam and understanding basic front-end web development.
+      My current focus is passing the CompTIA A+ Core 1 exam and understanding basic front-end web development.
     </p>
   </section>
   <section id="disclaimer">
@@ -70,7 +70,7 @@
     <p>
       Misrule is an experimental project.
       Nothing on this site constitutes professional, legal, or security advice. 
-      Content, structure,a dn focus may change without notice.
+      Content, structure, and focus may change without notice.
     </p>
   </section>
 </body>
