--- a/index.html
+++ b/index.html
@@ -36,27 +36,24 @@
   </section>
   <section id="certifications">
     <h2>Planned Certifications</h2>
+    <h3>Foundational IT & Security</h3>
     <ul>
-      <li>AWS Solutions Architect Associate</li>
-      <li>Azure Administrator</li>
-      <li>Azure Security Engineer</li>
-      <li>Comptia A+</li>
-      <li>Comptia Network+</li>
-      <li>Comptia Security+</li>
-      <li>Comptia Data+</li>
-      <li>Comptia Project+</li>
-      <li>Comptia CySA+</li>
-      <li>Comptia Pentest+</li>
-      <li>Linux Essentials</li>
-      <li>ITIL 4</li>
-      <li>eJPT</li>
-      <li>NIST AI RMF</li>
-      <li>CCSP (Associate)</li>
-      <li>SSCP (Associate)</li>
+      <li>CompTIA A+ (Planned)</li>
+      <li>CompTIA Network+ (Planned)</li>
+      <li>CompTIA Security+ (Planned)</li>
+    </ul>
+    <h3>Cloud & Platform Security</h3>
+    <ul>
+      <li>Microsoft Azure Fundamentals (Planned)</li>
+      <li>Azure Security Engineer (Future)</li>
+    </ul>
+    <h3>Governance, Risk & Compliance</h3>
+    <ul>
+    <li>NIST Risk Framework (Future)</li>
     </ul>
     <p>
       Certifications listed are planned learning milestones and have not yet been earned. 
-      Upon their completion a new section titled, "Completed Certifications," will be created. 
+      Upon their completion they will be marked as "Completed."
     </p>
   </section>
   <section id="current focus"/>
