--- a/log.html
+++ b/log.html
@@ -10,7 +10,7 @@
       <h1>Practice Log</h1>
       <p><a href="index.html">Back to Home</a></p>
     </header>
-    <nav><a href=labs.html">Labs & Fieldwork</nav>
+    <nav><a href="Labs.html">Labs & Fieldwork</nav>
     <section>
       <h2>Entries</h2>
       <ul>
