--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </header>
   <nav>
     <p><a href="log.html">Practice Log</a></p>
+    <p><a href="Labs.html">Labs & Fieldwork</p>
   </nav>
   <section id="about">
     <h2>About</h2>
