--- a/Labs.html
+++ b/Labs.html
@@ -14,15 +14,28 @@
       </nav>
     </header>
     <section>
-      <h2>Labs</h2>
+      <h2>Purpose</h2>
+      <p>This lab is a repository of the skills, realizations, and conclusions that I come to while completing labs and fieldwork
+      via free websites such as TryHackMe, HacktheBox,etc.</p>
+    </section>
+    <section>
+      <h2>Active Labs</h2>
       <ul>
         <li><strong>(12/17/2025) Lab 1:</strong></li>
       </ul>
     </section>
     <section>
-      <h2>Fieldwork</h2>
+      <h2>Completed Labs</h2>
       <ul>
-        <li><strong>(12/17/2025) Fieldwork 1:</strong></li>
+        <li><strong>(12/17/2025) Lab 1 Conclusions and Skills:</strong></li>
       </ul>
     </section>
+    <section>
+      <h2>Lab Notes/Reflections</h2>
+      <p><strong>(12/17/2025) Lab 1:</strong></p>
+    </section>
+    <section>
+     <h2>Roadmap</h2>
+    </section>
   </body>
+</html>
