--- a/Labs.html
+++ b/Labs.html
@@ -20,19 +20,21 @@
     </section>
     <section>
       <h2>Active Labs</h2>
-      <ul>
-        <li><strong>(12/17/2025) Lab 1:</strong></li>
-      </ul>
+      <ol>
+        <li><strong>(12/17/2025):</strong></li>
+      </ol>
     </section>
     <section>
       <h2>Completed Labs</h2>
-      <ul>
-        <li><strong>(12/17/2025) Lab 1 Conclusions and Skills:</strong></li>
-      </ul>
+      <ol>
+        <li><strong>(12/17/2025):</strong></li>
+      </ol>
     </section>
     <section>
+      <ol>
       <h2>Lab Notes/Reflections</h2>
-      <p><strong>(12/17/2025) Lab 1:</strong></p>
+      <p><strong>(12/17/2025):</strong></p>
+      </ol>
     </section>
     <section>
      <h2>Roadmap</h2>
