--- a/log.html
+++ b/log.html
@@ -16,7 +16,8 @@
     <section>
       <h2>Entries</h2>
       <ul>
-        <li><strong>(12/16/2025) Day 1:</strong> Site deployed, Sections added. DNS + Pages working.</li> 
+        <li><strong>(12/16/2025) Day 1:</strong> 
+          Site deployed, Sections added. DNS + Pages working.</li> 
         <li><strong>(12/17/2025) Day 2:</strong></li> Created the page "Labs & Fieldwork" as well as the relevant sections.
         Provided the page with the ability to be navigated to and from within pages, "Log" and "Home". I feel more confident about utilizing
         HTML and its basic syntax. In order to further develop the web page I will be uploading work completed from TryHackMe and other
