--- a/Labs.html
+++ b/Labs.html
@@ -20,24 +20,27 @@
     </section>
     <section>
       <h2>Active Labs</h2>
-      <ol>
-        <li><strong>(12/17/2025):</strong></li>
-      </ol>
+      <ul>
+        <li><strong><h3>(12/17/2025)<h3></h3></strong></li>
+      </ul>
     </section>
     <section>
       <h2>Completed Labs</h2>
-      <ol>
-        <li><strong>(12/17/2025):</strong></li>
-      </ol>
+      <ul>
+        <li><strong><h3>(12/17/2025)</h3></strong></li>
+      </ul>
     </section>
     <section>
-      <ol>
       <h2>Lab Notes/Reflections</h2>
-      <p><strong>(12/17/2025):</strong></p>
-      </ol>
+      <ul>
+      <p><strong><h3>(12/17/2025)</h3></strong></p>
+      </ul>
     </section>
     <section>
      <h2>Roadmap</h2>
+      <ul>
+      <h3>Week of December 21, 2025</h3>
+      </ul>
     </section>
   </body>
 </html>
