--- a/Labs.html
+++ b/Labs.html
@@ -21,13 +21,13 @@
     <section>
       <h2>Active Labs</h2>
       <ul>
-        <li><strong><h3>(12/17/2025)<h3></h3></strong></li>
+        <strong><h3>(12/17/2025)<h3></h3></strong>
       </ul>
     </section>
     <section>
       <h2>Completed Labs</h2>
       <ul>
-        <li><strong><h3>(12/17/2025)</h3></strong></li>
+        <strong><h3>(12/17/2025)</h3></strong>
       </ul>
     </section>
     <section>
