--- a/log.html
+++ b/log.html
@@ -16,9 +16,9 @@
     <section>
       <h2>Entries</h2>
       <ul>
-        <li><strong><h3>(12/16/2025) Day 1</h3></strong></li> 
+        <strong><h3>12/16/2025 Day 1</h3></strong> 
         <p>Site deployed, Sections added. DNS + Pages working.</p>
-        <li><strong><h3>(12/17/2025) Day 2</h3></strong></li> 
+        <strong><h3>12/17/2025 Day 2</h3></strong> 
         <p>Created the page "Labs & Fieldwork" as well as the relevant sections.
         Provided the page with the ability to be navigated to and from within pages, "Log" and "Home".<br> I feel more confident about utilizing
         HTML and its basic syntax. In order to further develop the web page I will be uploading work completed from TryHackMe and other
