--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h2>About</h2>
     <p>
       Misrule is an experimental cybersecurity learning project.
-      This site documents beginner-level skill development, hands-on practice,
+      This site documents beginner-level skill development, hands-on practice,<br>
       and system experimentation as I learn how modern security concepts work in reality. 
     </p>
   </section>
@@ -53,7 +53,7 @@
     <li>NIST Risk Framework (Future)</li>
     </ul>
     <p>
-      Certifications listed are planned learning milestones and have not yet been earned. 
+      Certifications listed are planned learning milestones and have not yet been earned.<br>
       Upon their completion they will be marked as "Completed."
     </p>
   </section>
@@ -66,9 +66,9 @@
   <section id="disclaimer">
     <h2>Disclaimer</h2>
     <p>
-      Misrule is an experimental project.
-      Nothing on this site constitutes professional, legal, or security advice. 
-      Content, structure, and focus may change without notice.
+      Misrule is an experimental project.<br>
+      Nothing on this site constitutes professional, legal, or security advice.<br>
+      Content, structure, and focus may change without notice.<br>
     </p>
   </section>
 </body>
