--- a/Labs.html
+++ b/Labs.html
@@ -15,8 +15,8 @@
     </header>
     <section>
       <h2>Purpose</h2>
-      <p>This lab is a repository of the skills, realizations, and conclusions that I come to while completing labs and fieldwork
-      via free websites such as TryHackMe, HacktheBox,etc.</p>
+      <p>This lab is a repository of the skills, realizations, and conclusions that I come to.<br>
+        All while completing labs and fieldwork via free websites such as TryHackMe, HacktheBox,etc.</p>
     </section>
     <section>
       <h2>Active Labs</h2>
