--- a/log.html
+++ b/log.html
@@ -19,9 +19,10 @@
         <strong><h3>12/16/2025 Day 1</h3></strong> 
         <p>Site deployed, Sections added. DNS + Pages working.</p>
         <strong><h3>12/17/2025 Day 2</h3></strong> 
-        <p>Created the page "Labs & Fieldwork" as well as the relevant sections.
-        Provided the page with the ability to be navigated to and from within pages, "Log" and "Home".<br> I feel more confident about utilizing
-        HTML and its basic syntax. In order to further develop the web page I will be uploading work completed from TryHackMe and other
+        <p>Created the page "Labs & Fieldwork" as well as the relevant sections.<br>
+        Provided the page with the ability to be navigated to and from within pages, "Log" and "Home".<br> 
+        I feel more confident about utilizing HTML and its basic syntax.<br>
+        In order to further develop the web page I will be uploading work completed from TryHackMe and other
         commonly used platforms that provide free labs. </p>
       </ul>
     </section>
