--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section id="about">
     <h2>About</h2>
     <p>
-      Misrule is an experimental cybersecurity learning project.
+      Misrule is an experimental cybersecurity learning project.<br>
       This site documents beginner-level skill development, hands-on practice,<br>
       and system experimentation as I learn how modern security concepts work in reality. 
     </p>
